@@ -3,6 +3,7 @@
 - double session (used to ovoid multiple scan of objects directories) was removed
 - session start was moved into the p4a::singleton() method
 - P4A_ENABLE_AUTO_INCLUSION constant was added (default true), if false disabled automatic application files inclusion thus you'll have to manually include every php file
+- jqModal was updated to 2007.07.30 +r11
 
 2.1.5
 - Hungarian translation was added (thanks to Sándor Csaba)
